--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <nav>
       <h1>Sites by Jean</h1>
       <p class="tagline">Small business websites, made with care.</p>
+   
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
     </nav>
+
   </header>
 
   <section class="hero">
