--- a/index.html
+++ b/index.html
@@ -9,21 +9,19 @@
 </head>
 <body>
   <header>
+    <h1>Sites by Jean</h1>
+    <p class="tagline">Small business websites, made with care.</p>
     <nav>
-      <h1>Sites by Jean</h1>
-      <p class="tagline">Small business websites, made with care.</p>
-   
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
     </nav>
-
   </header>
 
   <section class="hero">
     <div class="hero-content">
       <h2>Creative. Functional. Personal.</h2>
       <p>I craft websites that reflect your story — whether you're a maker, a small business owner, or just getting started online.</p>
-      <a href="#portfolio" class="cta-button">See My Work</a>
+      <a href="projects.html" class="cta-button">See My Work</a>
     </div>
   </section>
 
@@ -31,14 +29,14 @@
     <h2>Featured Projects</h2>
     <div class="projects">
       <div class="project">
-        <img src="images/project1.jpg" alt="Project 1 screenshot" />
-        <h3>Portfolio for a Photographer</h3>
-        <p>A minimal, image-forward site for showcasing stunning photography.</p>
+        <img src="images/project_math.jpg" alt="Math with Ms. Jean screenshot" />
+        <h3>Math with Ms. Jean</h3>
+        <p>A bright, friendly tutoring website designed using HTML and CSS. Focused on clarity and ease of navigation for parents.</p>
       </div>
       <div class="project">
-        <img src="images/project2.jpg" alt="Project 2 screenshot" />
-        <h3>Coffee Shop Website</h3>
-        <p>A cozy, modern site for a small local café with an online menu and contact form.</p>
+        <img src="images/project_burcu.jpg" alt="Burcu project screenshot" />
+        <h3>Burcu</h3>
+        <p>A colorful, animated site built with HTML, CSS, and JavaScript for a playful portfolio. Dynamic elements bring the brand to life.</p>
       </div>
     </div>
   </section>
